# REhoST

./: .gitignore  Cargo.toml  README.md  server.py  solve.py
.cargo/: config.toml
src/: constants.rs  firmware.rs  intrinsics.rs  main.rs  peripheral.rs  rehost.rs  secret.rs
