[package]
name = "REhoST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "firmware"
path = "./src/firmware.rs"

[[bin]]
name = "peripheral"
path = "./src/peripheral.rs"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
